--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "antd": "^4.19.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "3.2.0",
+    "typescript": "^4.6.2",
     "web3": "^1.6.1"
   },
   "scripts": {
