--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.19.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "3.2.0",
     "typescript": "^4.6.2",
     "web3": "^1.6.1"
