--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
-    "@truffle/hdwallet-provider": "^2.0.3",
-    "moment": "^2.29.1"
+    "@truffle/hdwallet-provider": "^2.0.4",
+    "moment": "^2.29.1",
+    "web3": "^1.7.1"
   }
 }
